--- a/daura.html
+++ b/daura.html
@@ -7,6 +7,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/eventstyle.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/TJDaura.css">
     <link rel="stylesheet" href="css/tolu-style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,10 +16,222 @@
     <title>DAURA</title>
 </head>
 <body>
-
-
-
-
+    <section class="daura-section">
+        <div class="parent">
+            <nav class="navbar navbar-expand-lg navbar-light text-white pt-4 ms-3">
+                <div class="container-fluid">
+                <div class="d-flex">
+                    <img src="tjdaura-img/TJlogo.png" alt="" class="img-fluid">
+                    <div class="ps-2 inside mt-2">
+                        <p>The</p>
+                        <p><strong>Mkutano</strong></p>
+                        <p>Company</p>
+                    </div>
+                </div>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active fw-bold ms-4 text-white" aria-current="page" href="#"><i class="bi bi-arrow-up-left for-color"></i>Home</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active fw-bold ms-4 text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Services
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Patners</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Testimonials</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Contact</a>
+                      </li>
+                    </ul>
+                    
+                  </div>
+                </div>
+            </nav>
+            <div class="text-center text-lg-start text-md-center text-sm-center">
+                <div class="text-white">
+                    <div class="main py-4">
+                        <div class="row py-2 for-mag text-center me-0">
+                            <div class="col-lg-1 col-md-1 col-1 for-d-side">
+                                <div class="off text-center text-lg-start">
+                                    <span><img src="tjdaura-img/TJfollow.png" alt="" class="img-fluid"></span>
+                                    <span><img src="tjdaura-img/TJVector(3).png" alt="" class="img-fluid pt-5"></span>
+                                    <span><img src="tjdaura-img/TJtwitter.png" alt="" class="img-fluid pt-3"></span>
+                                    <span><img src="tjdaura-img/TJyoutube.png" alt="" class="img-fluid pt-3"></span>
+                                    <span><img src="tjdaura-img/TJblog.png" alt="" class="img-fluid py-4"></span>
+                                    <span><img src="tjdaura-img/TJenvelope.png" alt="" class=" img-fluid pt-5"></span>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-12 recta">
+                                <div class="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-12 text-center recta-tw">
+                                <div class="for-line">
+                                    <h2 class="fw-bold">ECONOMIC</h2>
+                                    <H2 class="shadow fw-bold">MKUTANO</H2>
+                                </div>
+                                <div>
+                                    <div class="d-flex for-btw">
+                                        <h5 class="fw-bold">Title Video</h5>
+                                        <h5 class="fw-bold">15:00'</h5>
+                                    </div>
+                                    <div class="">
+                                        <p class="justify pt-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                        when an unknown printer took a galley of type and scrambled it to make a type 
+                                        specimen book. It has survived not only five centuries, but also the leap into 
+                                        electronic typesetting, remaining essentially unchanged.</p>
+                                        <p class="justify"><strong>People:</strong> the 1500s, lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-1 col-md-1 col-1 off-two">
+                                <div class="off-tw pe-2">
+                                    <span><img src="TJDaura-img/TJLine4.png" alt="" class="img-fluid to-cut"></span>
+                                    <span><img src="tjdaura-img/TJscroll.png" alt="" class="img-fluid pt-3"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="row pb-4 text-center container for-mag text-lg-start text-md-center text-sm-center">
+                            <span class="py-3"><hr></span>
+                            <div class="col-lg-3 col-md-4 col-12 lin pb-2">
+                                <div class="flexo">
+                                    <img src="TJDaura-img/TJGroup89.png" alt="" class="img-fluid reduce">
+                                    <h1 class="fs-1 ps-4 fw-bold ps-cut">The Daura</h1>
+                                </div>
+                                <a href="#" class="for-link fw-bold text-decoration-none text-white"><i class="bi bi-youtube pe-2"></i>Subscribe</a>
+                            </div>
+                            <div class="col-lg-6 col-md-5 col-12">
+                                <p class="justify"><strong>Ipsum is simply dummy text of the printing and typesetting industry.</strong> 
+                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                    when an unknown printer took a galley of type and scrambled it to make a type 
+                                    specimen book. It has survived not only five centuries, but also the leap into 
+                                    electronic typesetting, remaining essentially unchanged.</p>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-12">
+                                <img src="TJDaura-img/TJGroup91.png" alt="" class="img-fluid pt-2">
+                            </div>
+                        </div>
+                        </div>  
+                    </div>
+                </div>
+                <div class="container pb-5">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-12 pb-3">
+                            <div>
+                                <div class="text-white">
+                                    <div class="d-slide for-pink">
+                                        <div class="for-btw">
+                                            <img src="TJDaura-img/TJGroup89.png" alt="" class="img-fluid mic-reduce">                                            
+                                            <h6>15:00'</h6>
+                                        </div>
+                                        <h5 class="fw-bold">ECONOMIC</h5>
+                                        <H5 class="shadow fw-bold">MKUTANO</h5>
+                                    </div>
+                                    <div class="dd-slid change">
+                                        <h6 class="fw-bold">Title Video</h6>
+                                        <p class="justify">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 pb-3">
+                            <div>
+                                <div class="text-white">
+                                    <div class="d-slide for-hover">
+                                        <div class="for-btw">
+                                            <span><i class="bi bi-play-circle"></i></span>                                    
+                                            <h6>15:00'</h6>
+                                        </div>
+                                        <h5 class="fw-bold">ECONOMIC</h5>
+                                        <H5 class="shadow fw-bold">MKUTANO</h5>
+                                    </div>
+                                    <div class="dd-slid">
+                                        <h6 class="fw-bold">Title Video</h6>
+                                        <p class="justify">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 pb-3">
+                            <div>
+                                <div class="text-white">
+                                    <div class="d-slide for-hover">
+                                        <div class="for-btw">
+                                            <span><i class="bi bi-play-circle"></i></span>                                    
+                                            <h6>15:00'</h6>
+                                        </div>
+                                        <h5 class="fw-bold">ECONOMIC</h5>
+                                        <H5 class="shadow fw-bold">MKUTANO</h5>
+                                    </div>
+                                    <div class="dd-slid">
+                                        <h6 class="fw-bold">Title Video</h6>
+                                        <p class="justify">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 pb-3">
+                            <div>
+                                <div class="text-white">
+                                    <div class="d-slide for-hover">
+                                        <div class="for-btw">
+                                            <span><i class="bi bi-play-circle"></i></span>                                    
+                                            <h6>15:00'</h6>
+                                        </div>
+                                        <h5 class="fw-bold">ECONOMIC</h5>
+                                        <H5 class="shadow fw-bold">MKUTANO</h5>
+                                    </div>
+                                    <div class="dd-slid">
+                                        <h6 class="fw-bold">Title Video</h6>
+                                        <p class="justify">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <img src="Tjdaura-img/TJGroup23.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="for-pink text-white py-3">
+                    <div class="flexo">
+                        <div>
+                            <img src="TJDaura-img/TJGroup123.png" alt="" class="img-fluid re-duce">
+                        </div>
+                        <div>
+                            <div class="flexo">
+                                <img src="TJDaura-img/TJGroup423.png" alt="" class="img-fluid ree-duce pe-2">
+                                <h4><strong>Brochure</strong> the Brochure</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="TJDaura-img/TJGroup123.png" alt="" class="img-fluid re-duce">
+                        </div>
+                    </div>
+                    <div class="flexo lin">
+                        <img src="TJDaura-img/TJVector.png" alt="arrow" class="img-fluid">                        
+                        <a href="#" class="fs-5 ps-1 text-decoration-none text-white"><strong>Click Here</strong></a>
+                    </div>
+                </div>
+            </div>
+        </div>         
+    </section>
 <!-- contact section -->
 <section id="contact-section" class="pb-5">
     <div class="container">
@@ -40,8 +253,8 @@
                                 <div class="col-lg-4 col-md-6 col-5">
                                     <p class="fs-2">Follow Us</p>
                                 </div>
-                                <div class="col-lg-8 col-md-6 col-md-3 col-7 pt-2">
-                                    <div class="row">
+                                <div class="col-lg-8 col-md-6 col-7 pt-2">
+                                    <div class="row me-0">
                                         <div class="col-lg-3 col-md-3 col-3">
                                             <img src="tolu-img/contact-facebook.png" alt="Facebook">
                                         </div>
