--- a/creative.html
+++ b/creative.html
@@ -56,7 +56,7 @@
         </div>
         <div class="hero text-start text-light" style="min-height: 100vh;">
             <div class="section">
-                <div class="row">
+                <div class="row w-100">
                     <div class="col-lg-1 d-none d-lg-block py-5">
                         <div class="card border-0 w-50" style="background-color: rgba(11, 19, 31, 1);">
                             <img src="img/Follow us.png" alt=""  class="mx-auto my-2 logo w-auto h-auto">
@@ -88,9 +88,9 @@
                     <!-- <img src="Landing-page-sec-6/creative img.png" class="left-img img-fluid w-auto h-auto d-none d-lg-block" style="width: 100%!important;" alt=""> -->
                 </div>
                 <div class="col-lg-9 joke px-0 d-flex" style="padding-top: 140px">
-                    <div class="row">
+                    <div class="row w-100">
                         <div class="col-lg-6 pt-5" style="padding: 80px 0 80px 100px!important;">
-                            <h1 class="fw-bolder border-0">Creative</h1>
+                            <h1 class="fw-bolder border-0 create">Creative</h1>
                             <p class="text-start" style="width: 90%; font-size: 16px;">
                             <span class="fw-bold">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> 
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
