--- a/daura.html
+++ b/daura.html
@@ -34,27 +34,21 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active fw-bold ms-4 text-white" aria-current="page" href="#"><i class="bi bi-arrow-up-left for-color"></i>Home</a>
+                        <a class="nav-link active fw-bold ms-4 text-white" aria-current="page" href="index.html"><i class="bi bi-arrow-up-left for-color"></i>Home</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active fw-bold ms-4 text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Services
+                        <a class="nav-link active fw-bold ms-4 text-white" href="event.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Event
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Patners</a>
+                        <a class="nav-link active fw-bold ms-4 text-white" href="creative.html">Creative</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Testimonials</a>
+                        <a class="nav-link active fw-bold ms-4 text-white" href="incentive.html">Incentive</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active fw-bold ms-4 text-white" href="#">Contact</a>
+                        <a class="nav-link active fw-bold ms-4 text-white" href="daura.html">The Daura</a>
                       </li>
                     </ul>
                     
