--- a/incentive.html
+++ b/incentive.html
@@ -7,6 +7,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/eventstyle.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css//mavdavis-style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,11 +15,178 @@
     <title>INCENTIVE</title>
 </head>
 <body>
+    <div class="hero-head" style="color: rgb(226, 226, 226);">
+        <div class="hero-sec">
+            <div class="firstview">
+                <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-trasnparent px-4 text-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-light d-flex logo-text" href="#">
+                            <img src="mavdavis-img/mkt-logo.png" alt="" class="logo w-auto h-auto">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
+                            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
+                                        aria-current="page" href="#">
+                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-100 h-auto">
+                                        Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown"
+                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Services
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="#">Partners</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="#">Testimonials</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="#">Contact</a>
+                                </li>
+                        </div>
+                        <div class="menu">
+                            <img class="me-5 d-none d-lg-block" src="mavdavis-img/Group 22.png" alt="hambuger">
+                        </div>
+                        <i class="fa-solid fa-bars fs-3 ms-auto d-none d-md-block d-lg-block"></i>
+                    </div>
+                </nav>
+            </div>
+            <div class="row me-0">
+                <div class="col-lg-1 col-md-1 col-sm-1 col-1 mt-5 d-none d-lg-block">
+                    <div class="card border-0 w-50" style="background-color: #B91869;">
+                        <img src="mavdavis-img/Followus.png" alt="" class="mx-auto my-2 logo w-auto h-auto">
+                        <img src="mavdavis-img/facebook.png" alt="" class="mx-auto mb-2 w-auto h-auto">
+                        <img src="mavdavis-img/twitter.png" alt="" class="mx-auto mb-2 w-auto h-auto">
+                        <img src="mavdavis-img/youtube.png" alt="" class="mx-auto mb-5 w-auto h-auto">
+                        <img src="mavdavis-img/Blog.png" alt="" class="mx-auto mt-5 w-auto h-auto">
+                        <img src="mavdavis-img/mail.png" alt="" class="mx-auto mt-2 mb-2 w-auto h-auto">
+                    </div>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-11 col-11">
+                    <div class="hero mx-auto" style="width: 75%; padding: 120px 0;">
+                        <div class="hero-text">
+                            <img src="mavdavis-img/pink-camera.png" class="img-fluid" alt="camera">
+                            <h2 class="fw-bold display-3" style="color: #B91869;">Incentive</h2>
+                            <p class="hero-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
+                            <img src="mavdavis-img/arrow.png" class="img-fluid" alt="arrow">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1 col-sm-1 col-1 text-center px-0">
+                    <img src="mavdavis-img/Line4.png" alt="">
+                </div>
 
-
-
-
-    
+                <div class="container-fluid pe-4">
+                    <div class="row py-3 me-0 justify-content-end">
+                        <div class="col-lg-3 d-lg-block d-none">
+                            <div class="card bg-transparent border-0 pe-3">
+                                <div class="d-flex justify-content-end align-items-center">
+                                    <div>
+                                        <img src="mavdavis-img/Group.png" alt=""  class="w-auto h-auto me-2">
+                                    </div>
+                                    <div>
+                                        <img src="mavdavis-img/ScrollDown.png" alt=""  class="w-auto h-auto">
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section2" style="padding: 120px 0;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-11 col-md-11 col-sm-11 col-11 left-section">
+                    <div class="incent-top">
+                        <div class="row">
+                            <div class="col-lg-9 col-md-9">
+                                <div class="title-content pb-3">
+                                    <h1 style="color: #B91869; font-weight:800; font-size:50px">Incentives</h1>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3">
+                                <img src="mavdavis-img/Group.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="incent-text">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <p class="lh-lg"><span class="fw-bold">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> 
+                                   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                   when an unknown printer took a galley of type and scrambled it to make a type 
+                                   specimen book. It has survived not only five centuries, but also the leap into 
+                                   electronic typesetting, remaining essentially unchanged.
+                                </p>
+                            </div>
+                            <div class="col-lg-6">
+                                <p class="lh-lg"><span class="fw-bold">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> 
+                                   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                   when an unknown printer took a galley of type and scrambled it to make a type 
+                                   specimen book. It has survived not only five centuries, but also the leap into 
+                                   electronic typesetting, remaining essentially unchanged.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="incent-bottom">
+                        <div class="row align-items-center">
+                            <div class="col-lg-9 col-md-7">
+                                <img src="mavdavis-img/Line6.png" class="img-fluid" style="width: 100%;" alt="Line">
+                            </div>
+                            <div class="col-lg-3 col-md-5">
+                                <p>Please contact us<br><span class="fw-bold">incentive@themkutano.com to</span><br>discuss your solution.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1 col-sm-1 col-1">
+                    <div class="row text-center">
+                        <div class="col-lg-11">
+                            <img src="mavdavis-img/Line4.png" alt="">
+                        </div>
+                        <div class="col-lg-1 w-100 ps-0 pt-3">
+                            <img src="mavdavis-img/Incentive.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image-for-incentive">
+        <img src="mavdavis-img/the-image-for-incentive.png" class="img-fluid" alt="">
+    </div>
+    <div class="download" style="background:rgba(185, 24, 105, 1);">
+        <div class="container pt-3">
+            <div class="content d-flex justify-content-center">
+                <div class="download d-flex justify-content-center">
+                    <img src="mavdavis-img/small-dots.png" class="d-none d-lg-block img-fluid" alt="dots">
+                    <div class="brochure d-flex justify-content-between">
+                        <img src="mavdavis-img/book.png" class="img-fluid" alt="book">
+                        <h4 class="ps-3 pt-3 fw-light" style="width: 100%; font-size: 20px; color: white;"><span class="fw-bold">Download</span>the Brochure</h4>
+                    </div>
+                    <img src="mavdavis-img/small-dots.png" class="d-none d-lg-block img-fluid" alt="dots">
+                </div>
+            </div>
+            <div class="conten-2 d-flex justify-content-center">
+                <img class="fw-bold pe-2 d-none d-lg-block img-fluid" style="width: auto; height: 20px;" src="mavdavis-img/log.png" alt="">
+                <a href="">
+                    <p class="fw-bold fs-5 text-light" style="text-decoration: none;">click here</p>
+                </a>
+            </div>
+        </div>
+    </div>
     <!-- javascript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
