--- a/incentive.html
+++ b/incentive.html
@@ -32,24 +32,23 @@
                             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
-                                        aria-current="page" href="#">
+                                        aria-current="page" href="index.html">
                                         <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-100 h-auto">
                                         Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown"
-                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Services
+                                    <a class="nav-link text-light" href="event.html">
+                                        Event
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Partners</a>
+                                    <a class="nav-link text-light" href="creative.html">Creative</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Testimonials</a>
+                                    <a class="nav-link text-light" href="incentive.html">Insentive</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Contact</a>
+                                    <a class="nav-link text-light" href="daura.html">The Daura</a>
                                 </li>
                         </div>
                         <div class="menu">
