--- a/event.html
+++ b/event.html
@@ -16,7 +16,95 @@
     <title>EVENT</title>
 </head>
 <body>
-    
+    <!-- navbar and hero section -->
+    <div class="hero-head" style="color: rgb(226, 226, 226);">
+        <div class="hero-sec">
+            <div class="firstview">
+                <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-trasnparent px-4 text-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-light d-flex logo-text" href="#">
+                            <img src="mavdavis-img/mkt-logo.png" alt="" class="logo w-auto h-auto">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
+                            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
+                                        aria-current="page" href="index.html">
+                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-100 h-auto">
+                                        Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link text-light" href="event.html">
+                                        Event
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="creative.html">Creative</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="incentive.html">Insentive</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="daura.html">The Daura</a>
+                                </li>
+                        </div>
+                        <div class="menu">
+                            <img class="me-5 d-none d-lg-block" src="mavdavis-img/Group 22.png" alt="hambuger">
+                        </div>
+                        <i class="fa-solid fa-bars fs-3 ms-auto d-none d-md-block d-lg-block"></i>
+                    </div>
+                </nav>
+            </div>
+            <div class="row me-0">
+                <div class="col-lg-1 col-md-1 col-sm-1 col-1 mt-5 d-none d-lg-block">
+                    <div class="card border-0 w-50" style="background-color: #B91869;">
+                        <img src="mavdavis-img/Followus.png" alt="" class="mx-auto my-2 logo w-auto h-auto">
+                        <img src="mavdavis-img/facebook.png" alt="" class="mx-auto mb-2 w-auto h-auto">
+                        <img src="mavdavis-img/twitter.png" alt="" class="mx-auto mb-2 w-auto h-auto">
+                        <img src="mavdavis-img/youtube.png" alt="" class="mx-auto mb-5 w-auto h-auto">
+                        <img src="mavdavis-img/Blog.png" alt="" class="mx-auto mt-5 w-auto h-auto">
+                        <img src="mavdavis-img/mail.png" alt="" class="mx-auto mt-2 mb-2 w-auto h-auto">
+                    </div>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-11 col-11">
+                    <div class="hero mx-auto" style="width: 75%; padding: 120px 0;">
+                        <div class="hero-text">
+                            <img src="mavdavis-img/pink-camera.png" class="img-fluid" alt="camera">
+                            <h2 class="fw-bold display-3" style="color: #B91869;">Incentive</h2>
+                            <p class="hero-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
+                            <img src="mavdavis-img/arrow.png" class="img-fluid" alt="arrow">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1 col-sm-1 col-1 text-center px-0">
+                    <img src="mavdavis-img/Line4.png" alt="">
+                </div>
+
+                <div class="container-fluid pe-4">
+                    <div class="row py-3 me-0 justify-content-end">
+                        <div class="col-lg-3 d-lg-block d-none">
+                            <div class="card bg-transparent border-0 pe-3">
+                                <div class="d-flex justify-content-end align-items-center">
+                                    <div>
+                                        <img src="mavdavis-img/Group.png" alt=""  class="w-auto h-auto me-2">
+                                    </div>
+                                    <div>
+                                        <img src="mavdavis-img/ScrollDown.png" alt=""  class="w-auto h-auto">
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- ore begins -->
     <section class="event-section">
         <div class="gradient-bk text-center text-lg-center text-md-center text-sm-center text-white py-5">
