--- a/event.html
+++ b/event.html
@@ -62,7 +62,7 @@
             </div>
             <div class="row me-0">
                 <div class="col-lg-1 col-md-1 col-sm-1 col-1 mt-5 d-none d-lg-block">
-                    <div class="card border-0 w-50" style="background-color: #B91869;">
+                    <div class="card border-0 w-50" style="background-color: #45CB9C;">
                         <img src="mavdavis-img/Followus.png" alt="" class="mx-auto my-2 logo w-auto h-auto">
                         <img src="mavdavis-img/facebook.png" alt="" class="mx-auto mb-2 w-auto h-auto">
                         <img src="mavdavis-img/twitter.png" alt="" class="mx-auto mb-2 w-auto h-auto">
@@ -72,18 +72,12 @@
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-11 col-11">
-                    <div class="hero mx-auto" style="width: 75%; padding: 120px 0;">
-                        <div class="hero-text">
-                            <img src="mavdavis-img/pink-camera.png" class="img-fluid" alt="camera">
-                            <h2 class="fw-bold display-3" style="color: #B91869;">Incentive</h2>
-                            <p class="hero-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry.</p>
-                            <img src="mavdavis-img/arrow.png" class="img-fluid" alt="arrow">
-                        </div>
+                    <div class="hero me-auto" style="width: 75%; padding: 120px 0;">
+                        <img src="/mavdavis-img/mainText.png" alt="" class="w-auto h-auto">
                     </div>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-1 text-center px-0">
-                    <img src="mavdavis-img/Line4.png" alt="">
+                    <img src="mavdavis-img/Line4.png" alt="" class="">
                 </div>
 
                 <div class="container-fluid pe-4">
@@ -164,7 +158,7 @@
                                     <img src="Ore-imgGroup 91.png" alt="" class="img-fluid pt-3">
                                 </div>
                             </div>
-                            <div class="side-elements"> <img class="side-text" src="/ore-img/side.png" alt="">
+                            <div class="side-elements d-none"> <img class="side-text" src="/ore-img/side.png" alt="">
                                 <img class="side-line" src="/Ore-img/sideline.png" alt=""> </div>
                         </div>
                         </div>
@@ -211,7 +205,7 @@
                                 <img src="/Ore-img/Group (1).png" alt="line">
                             </div>
                         </div>
-                        <div class="side-elements1"> <img class="side-text1" src="/Ore-img/side.png" alt="">
+                        <div class="side-elements1 d-none"> <img class="side-text1" src="/Ore-img/side.png" alt="">
                             <img class="side-line1" src="/Ore-img/Line 16.png" alt=""> 
                         </div>
                     </div>
@@ -237,7 +231,7 @@
                         </div>
                    
                     </div>
-                    <div class="side-element3"> 
+                    <div class="side-element3 d-none"> 
                         <img class="side-text3" src="/Ore-img/side.png" alt="">
                         <img class="side-line3" src="/Ore-img/Line 16.png" alt="">
                     </div>
