--- a/index.html
+++ b/index.html
@@ -245,20 +245,20 @@
             <div class="col-lg-6 col-12 left-incentive-section mx-auto">
                 <div class="card mx-auto border-0 bg-transparent">
                     <div class="bigger container pt-5">
-                        <img src="/thia-img/pink vector.png" alt="pink-vector" class="pb-3 ms-3">
+                        <img src="./thia-img/pink vector.png" alt="pink-vector" class="pb-3 ms-3">
                         <div class="first-part d-flex gap-3 mx-3">
                         <h1 class="fw-bold">Incentive</h1>
-                        <img src="/thia-img/Line 8.png" alt="line" style="mix-blend-mode: screen;">
+                        <img src="./thia-img/Line 8.png" alt="line" style="mix-blend-mode: screen;">
                         </div>
                         <div class="lorem-part mb-3">
                         <p class="creative-text"><span class="thick">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remainin essentially unchanged.</p>
                         </div>
                         <div class="info d-flex gap-3">
-                        <img src="/thia-img/Vector.png" alt="vector" style="width: 3%; height:3vh">
+                        <img src="./thia-img/Vector.png" alt="vector" style="width: 3%; height:3vh">
                         <h4><span class="thick">More</span> info</h4>
                         </div>
                         <div class="group" >
-                        <img src="/thia-img/Group 32.png" alt="group" class="d-flex justify-content-end group">
+                        <img src="./thia-img/Group 32.png" alt="group" class="d-flex justify-content-end group">
                         </div>
                 </div>
                 </div>
@@ -266,7 +266,7 @@
             </div>
             <div class="col-lg-3 right-incentive-section">
                 <div class="card">
-                    <img src="/thia-img/image 5.png" alt="man" class="w-auto h-100">
+                    <img src="./thia-img/image 5.png" alt="man" class="w-auto h-100">
                 </div>
             
             </div>
