--- a/event.html
+++ b/event.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-11 col-11">
                     <div class="hero me-auto" style="width: 75%; padding: 120px 0;">
-                        <img src="/mavdavis-img/mainText.png" alt="" class="w-auto h-auto">
+                        <img src="mavdavis-img/mainText.png" alt="" class="w-auto h-auto">
                     </div>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-1 text-center px-0">
