--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card mx-auto mb-2" style="width: 18rem; margin-top: 10px;">
                             <div class="card-img">
-                                <img src="/khalid-img/greyed.png" class="card-img-top" alt="...">
+                                <img src="khalid-img/greyed.png" class="card-img-top" alt="...">
                                 <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 30px; position: absolute; top: 15px; left: 20px;">
                                 <p class="fw-bolder" style=" position: absolute; top: 15px; right: 20px; color: white;">15:00'</p>
                             </div>
