--- a/event.html
+++ b/event.html
@@ -490,7 +490,7 @@
             </div>
         </div>
     </section>
-    <!-- footer-section -->
+    <!-- footer section -->
     <footer>
         <div class="container-fluid text-white">
             <div class="row">
