--- a/event.html
+++ b/event.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/eventstyle.css">
     <link rel="stylesheet" href="./css/paul-style.css">
-    <link rel="stylesheet" href="/css/oreStyles.css">
+    <link rel="stylesheet" href="./css/oreStyles.css">
+    <link rel="stylesheet" href="css/mavdavis-style.css"
     <link rel="stylesheet" href="css/tolu-style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +62,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="row me-0">
+            <div class="row me-0 justify-content-center align-items-center">
                 <div class="col-lg-1 col-md-1 col-sm-1 col-1 mt-5 d-none d-lg-block">
                     <div class="card border-0 w-50" style="background-color: #45CB9C;">
                         <img src="mavdavis-img/Followus.png" alt="" class="mx-auto my-2 logo w-auto h-auto">
@@ -72,9 +73,14 @@
                         <img src="mavdavis-img/mail.png" alt="" class="mx-auto mt-2 mb-2 w-auto h-auto">
                     </div>
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-11 col-11">
-                    <div class="hero me-auto" style="width: 75%; padding: 120px 0;">
-                        <img src="mavdavis-img/mainText.png" alt="" class="w-auto h-auto">
+                <div class="col-lg-10 col-md-10 col-sm-10 col-10">
+                    <div class="me-auto mx-auto w-100">
+                        <img src="mavdavis-img/mainText.png" alt="" class="w-100 h-100 d-none d-lg-block d-md-block">
+                        <div class="energymuk text-center  d-none ">
+                            <h1 class="display-1 fw-bolder">Energy Muktano</h1>
+                            <h1 class="display-2 fw-bolder">2021</h1>
+                            <button class="px-5 py-3 border border-2 rounded-3 bg-transparent text-light">Book now</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-1 text-center px-0">
